<resources>
    <string name="gf_app_name">Google Feedback</string>
    <string name="gf_back">Back</string>
    <string name="gf_feedback">Feedback</string>
    <string name="gf_user_account">User Account</string>
    <string name="gf_anonymous">Anonymous</string>
    <string name="gf_choose_an_account">Choose an account</string>
    <string name="gf_report_feedback">Report An Issue</string>
    <string name="gf_screenshot_preview">Screenshot Preview</string>
    <string name="gf_preview">Preview</string>
    <string name="gf_send">Send</string>
    <string name="gf_preview_feedback">Preview feedback</string>
    <string name="gf_no_data">No data</string>
    <string name="gf_privacy">Privacy</string>
    <string name="gf_include_system_data">Include system data</string>
    <string name="gf_include_screenshot">Include screenshot</string>
    <string name="gf_this_will_help">Share system data with Google, to better diagnose the problem.</string>
    <string name="gf_this_will_help_screenshot">Send screenshot of the last page you were on.</string>
    <string name="gf_unknown_app">Unknown application</string>
    <string name="gf_report_being_sent">Thanks, your report is being sent.</string>
    <string name="gf_report_sent_failure">Sorry, there was an error sending your report.</string>
    <string name="gf_report_queued">Your device seems to be offline. We will retry when you are connected.</string>
    <string name="gf_optional_description">Description (optional)</string>
    <string name="gf_system_log">System Log</string>
    <string name="gf_sys_logs">System Logs</string>
    <string name="gf_privacy_policy">Privacy Policy</string>
    <string name="gf_privacy_text">By selecting [Send] you acknowledge and agree that any information contained in the feedback report will be used by Google in accordance with the Google privacy policies applicable to the application through which you initiated the report. You agree that Google may use any feedback that you provide to improve any Google products or services.</string>
    <string name="gf_build_view">Build Data</string>
    <string name="gf_network_data">Network</string>
    <string name="gf_network_name">Network Name</string>
    <string name="gf_error_report_system">System</string>
    <string name="gf_error_report_package_version">Package version</string>
    <string name="gf_error_report_package_version_name">Package version name</string>
    <string name="gf_error_report_package_name">Package name</string>
    <string name="gf_error_report_installer_package_name">Installed by</string>
    <string name="gf_error_report_process_name">Process name</string>
    <string name="gf_error_report_time">Time</string>
    <string name="gf_error_report_description">Description</string>
    <string name="gf_error_report_device">Device</string>
    <string name="gf_error_report_build_id">Build id</string>
    <string name="gf_error_report_build_type">Build type</string>
    <string name="gf_error_report_model">Model</string>
    <string name="gf_error_report_product">Product</string>
    <string name="gf_error_report_sdk_version">SDK version</string>
    <string name="gf_error_report_release">Release</string>
    <string name="gf_error_report_incremental">Incremental version</string>
    <string name="gf_error_report_codename">Codename</string>
    <string name="gf_error_report_board">Board</string>
    <string name="gf_error_report_brand">Brand</string>
    <string name="gf_error_report_user_accounts">Number of Google accounts</string>
    <string name="gf_error_report_installed_packages">Installed applications</string>
    <string name="gf_error_report_running_apps">Running applications</string>
    <string name="gf_error_report_system_log">System log</string>
    <string name="gf_error_report_system_app">System app</string>
    <string name="gf_error_report_running_service_details">Details</string>
    <string name="gf_should_submit_on_empty_description">You have not entered an issue description. Are you sure you want to send feedback without a description?</string>
    <string name="gf_should_submit_anonymously">You are submitting feedback anonymously. Your email address may help us debug your reported issue better. Are you sure you want to continue?</string>
    <string name="gf_yes">Yes</string>
    <string name="gf_no">No</string>
    <string name="gf_crash_header">Crash Data</string>
    <string name="gf_stack_trace">Stack Trace</string>
    <string name="gf_exception_class_name">Exception Class Name</string>
    <string name="gf_throw_file_name">Throw File Name</string>
    <string name="gf_throw_line_number">Throw Line Number</string>
    <string name="gf_throw_class_name">Throw Class Name</string>
    <string name="gf_throw_method_name">Throw Method Name</string>
    <string name="gf_exception_message">Exception Message</string>
    <string name="gf_receiver_transport_scheme">https</string>
    <string name="gf_receiver_host">www.google.com</string>
    <string name="gf_receiver_port" />
    <string name="gf_receiver_path">/tools/feedback/android/__submit</string>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="default_environment">prod</string>
    <string name="account_preference_key">account</string>
    <string name="wifi_only_preference_key">wifiOnly</string>
    <string name="about_preference_key">about</string>
    <string name="terms_of_service_preference_key">termsOfService</string>
    <string name="privacy_policy_preference_key">privacyPolicy</string>
    <string name="open_source_licenses_preference_key">openSourceLicenses</string>
    <string name="feedback_preference_key">feedback</string>
    <string name="abuse_preference_key">reportAbuse</string>
    <string name="status_bar_preference_key">statusBar</string>
    <string name="presentation_preference_category_key">presentation</string>
    <string name="additional_info_preference_category_key">additionalInfo</string>
    <string name="automatically_download_preference_key">automaticallyDownload</string>
    <string name="notification_preference_key">notification</string>
    <string name="translation_preference_key">translation</string>
    <string name="enable_sync_preference_key">enableSync</string>
    <string name="only_if_charging_preference_key">onlyIfCharging</string>
    <string name="include_images_preference_key">includeImages</string>
    <string name="developer_preference_key">developer</string>
    <string name="usage_policy_preference_key">usagePolicy</string>
    <string name="show_read_posts_preference_key">showReadPosts</string>
    <string name="show_pick_of_the_week_preference_key">showPickOfTheWeek</string>
    <string name="report_content_problem_preference_key">reportContentProblem</string>
    <string name="server_type_key">serverType</string>
    <string name="server_custom_key">serverCustom</string>
    <string name="reading_position_sync_preference_key">readingPositionSync</string>
    <string name="country_override_key">countryOverride</string>
    <string name="developer_options_capitalized">Developer options</string>
    <string name="server_type_title">Server</string>
    <string name="server_custom_title">Custom server</string>
    <string name="server_custom_summary">e.g https://www.google.com</string>
    <string name="country_override_title">Country override</string>
    <string name="country_override_summary">Country code, e.g. US</string>
    <string name="magazines_view_magazine_outline">Outline Mode</string>
    <string name="loading">Loading…</string>
    <string name="remove">Remove</string>
    <string name="share">Share</string>
    <string name="subscribe_button">Subscribe for free</string>
    <string name="open_edition">Open edition</string>
    <string name="add_edition">Add edition</string>
    <string name="launch_browser">Launch browser</string>
    <string name="add_for_free">Add for free</string>
    <string name="in_library">In library</string>
    <string name="text_size">Text size</string>
    <string name="ask_add_to_library">Would you like to add %s to your library?</string>
    <string name="go_to_library">Go to library</string>
    <string name="settings">Settings</string>
    <string name="background_sync_capitalized">BACKGROUND SYNC</string>
    <string name="enable_background_sync">Enable background sync</string>
    <string name="only_if_charging">Only if charging</string>
    <string name="sync_now">Sync now</string>
    <string name="refresh">Refresh</string>
    <string name="additional_info_capitalized">ADDITIONAL INFO</string>
    <string name="feedback">Send Feedback</string>
    <string name="feedback_description">Send us some feedback</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="usage_policy">Usage Policy</string>
    <string name="usage_policy_description">Google Currents is for personal and non-commercial use only.</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="open_source_licenses_description">Legal information about licenses</string>
    <string name="report_abuse">Report abuse</string>
    <string name="report_abuse_description">Report any content you deem inappropriate</string>
    <string name="report_content_problem">Report a content problem</string>
    <string name="report_content_problem_description">Report any content that is broken or wrong</string>
    <string name="support">Support</string>
    <string name="customer_support">Contact Customer Support</string>
    <string name="give_product_feedback">Give product feedback</string>
    <string name="report_inappropriate_content">Report inappropriate content</string>
    <string name="report_copyright_issue">Report a copyright issue</string>
    <string name="account">Google account</string>
    <string name="account_short">Account</string>
    <string name="help">Help</string>
    <string name="automatically_download">Automatically download</string>
    <string name="automatically_download_description">Download all purchases and subscriptions without asking</string>
    <string name="unmetered_networks_only">Download over Wi-Fi only</string>
    <string name="unmetered_networks_only_description">"To reduce carrier data charges, don't download over mobile networks."</string>
    <string name="show_notifications">Show notifications</string>
    <string name="show_notifications_description">Notify when a new issue is available or downloaded</string>
    <string name="show_pick_of_the_week">Show Pick of the Week</string>
    <string name="presentation_capitalized">PRESENTATION</string>
    <string name="status_bar">Status bar</string>
    <string name="set_status_bar">Show/hide device status bar</string>
    <string name="translation_title">Translation</string>
    <string name="translate">Translate</string>
    <string name="magazines_home_view_by_title">View by title</string>
    <string name="magazines_menu_show_archived">Show archived magazines</string>
    <string name="magazines_menu_manage_subscriptions">Manage subscriptions</string>
    <string name="magazines_menu_shop">Shop for magazines</string>
    <string name="magazines_menu_search">Search magazines</string>
    <string name="magazines_view_flowing_text">View text</string>
    <string name="save_for_later">Save For Later</string>
    <string name="show_read_posts">"Hide articles I've already read"</string>
    <string name="offline_images">Include images for offline reading</string>
    <string name="play_audio">Play audio</string>
    <string name="pause_audio">Pause audio</string>
</resources>