<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_share_holo_light" android:id="@id/menu_share" android:orderInCategory="0" android:title="@string/share" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/web_site" android:id="@id/menu_launch_browser" android:visible="false" android:orderInCategory="1" android:title="@string/launch_browser" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/add" android:id="@id/menu_add_edition" android:visible="false" android:orderInCategory="2" android:title="@string/add_edition" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/open_edition" android:id="@id/menu_open_edition" android:visible="false" android:orderInCategory="3" android:title="@string/open_edition" android:showAsAction="ifRoom" />
    <item android:icon="@drawable/ic_menu_search" android:id="@id/menu_search" android:orderInCategory="4" android:title="@*android:string/search_go" android:showAsAction="collapseActionView" />
    <item android:id="@id/menu_sync" android:orderInCategory="5" android:title="@string/sync_now" android:showAsAction="never" />
    <item android:id="@id/menu_settings" android:orderInCategory="6" android:title="@string/settings" android:showAsAction="never" />
    <item android:id="@id/menu_help" android:orderInCategory="7" android:title="@string/help" android:showAsAction="never" />
</menu>