<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@drawable/currents_app_row_background" android:padding="@dimen/add_more_edition_padding" android:paddingBottom="@dimen/add_more_edition_bottom_padding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="@dimen/app_list_row_height"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:dots="http://schemas.android.com/apk/res-auto">
    <FrameLayout android:id="@id/thumbnail_wrapper" android:background="@drawable/app_icon_background" android:layout_width="@dimen/app_grid_icon_size_with_border" android:layout_height="@dimen/app_grid_icon_size_with_border" android:layout_marginRight="@dimen/add_more_edition_internal_spacing" android:layout_alignParentLeft="true">
        <com.google.apps.dots.android.dotslib.widget.CacheableAttachmentView android:layout_gravity="center" android:id="@id/thumbnail" android:layout_width="@dimen/app_grid_icon_size" android:layout_height="@dimen/app_grid_icon_size" android:scaleType="fitCenter" dots:cacheName="ICONS" />
    </FrameLayout>
    <LinearLayout android:gravity="top|right|center" android:id="@id/widgetGroup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/add_more_edition_internal_spacing" android:layout_alignParentRight="true">
        <com.google.apps.dots.android.dotslib.widget.DotsButton android:textSize="@dimen/add_more_edition_subtitle_text_size" android:textStyle="bold" android:gravity="center" android:id="@id/subscribed" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/in_library" dots:font="REGULAR_SANS" style="?grayButton" />
        <com.google.apps.dots.android.dotslib.widget.DotsButton android:textSize="@dimen/add_more_edition_subtitle_text_size" android:textStyle="bold" android:gravity="center" android:id="@id/unsubscribe" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/remove" dots:font="REGULAR_SANS" style="?grayButton" />
        <com.google.apps.dots.android.dotslib.widget.DotsButton android:textSize="@dimen/add_more_edition_subtitle_text_size" android:textStyle="bold" android:gravity="center" android:id="@id/subscribe" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/add_for_free" dots:font="REGULAR_SANS" style="?blueButton" />
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:id="@id/textGroup" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@id/widgetGroup" android:layout_toRightOf="@id/thumbnail_wrapper" android:layout_alignWithParentIfMissing="true">
        <com.google.apps.dots.android.dotslib.widget.DotsTextView android:textSize="@dimen/add_more_edition_title_text_size" android:textColor="@*android:color/black" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" dots:font="REGULAR_SANS" />
        <com.google.apps.dots.android.dotslib.widget.DotsTextView android:textSize="@dimen/add_more_edition_subscribers_text_size" android:textColor="@color/accent" android:id="@id/subscribers" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" dots:font="REGULAR_SANS" />
        <com.google.apps.dots.android.dotslib.widget.EllipsizingTextView android:textSize="@dimen/add_more_edition_subtitle_text_size" android:textColor="#ff707070" android:id="@id/subtitle" android:layout_width="wrap_content" android:layout_height="wrap_content" android:maxLines="2" android:lineSpacingMultiplier="1.1" dots:font="REGULAR_SANS" />
    </LinearLayout>
</RelativeLayout>